# cmake-example-with-vcpkg

./: CMakeLists.txt  CTestConfig.cmake  CmakeExampleWithVcpkgConfig.h.in  MultiCPackConfig.cmake  README.md  TutorialConfig.h.in  main_cmake_example_with_vcpkg.c  tutorial.c  tutorial.cxx
.github/workflows/: build-and-test.yml  build.yml
versions/: CMakeLists.txt  MakeTable.c  mysqrt.c  mysqrt.cxx  mysqrt.h  versions.c  versions.cxx  versions.h  versions_test.c
